--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: black;
 }
 
 li {
@@ -23,7 +23,7 @@ li a {
 }
 
 li a:hover {
-  background-color: #111;
+  background-color: green;
 }
 
 .active {
@@ -34,10 +34,10 @@ li a:hover {
 <body>
 
 <ul>
-  <li><a href="#home" class="active">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="https://techgeekunited.github.io/" class="active">Home</a></li>
+  <li><a href="https://www.youtube.com/channel/UCPnF-OMbQfLvB4OlRsgDRhA">Youtube</a></li>
+  <li><a href="contact.html">Contact</a></li>
+  <li><a href="about.html">About</a></li>
 </ul>
 
 </body>
