--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ li a:hover {
   <li><a href="contact.html">Contact</a></li>
   <li><a href="about.html">About</a></li>
 </ul>
-
+  <p>Welcome to the site of Tech Geek United</p>
 </body>
 </html>
 
