--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+p {
+  background-image: url('red.png');
+}
+</style>
   <title>Home</title>
 <style>
 ul {
