--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,11 @@
 <html>
     <title>Contact</title>
 <head>
+      <style>
+   body {
+  background-image: url('red.png');
+    }
+</style>
 <style>
 ul {
   list-style-type: none;
