--- a/about.html
+++ b/about.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+   body {
+  background-image: url('red.png');
+    }
+</style>
   <title>About</title>
 <style>
 ul {
