--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@ li a:hover {
   <li><a href="contact.html">Contact</a></li>
   <li><a href="about.html">About</a></li>
 </ul>
-  <p>Welcome to the site of Tech Geek United</p>
+  <h1>Welcome!</h1>
+  <p>Hi! I am Tech Geek United I am a HTML/CSS/JS/C#/Java/(A few other languages) Programmer and a smaller youtuber as well as a minecraft moddder.</p>
+  <br><p>So Explore the website and look at some cool projects i have contributed to!</p>
 </body>
 </html>
 
