--- a/about.html
+++ b/about.html
@@ -45,7 +45,12 @@ li a:hover {
   <li><a href="contact.html">Contact</a></li>
   <li><a href="about.html" class="active">About</a></li>
 </ul>
-<p>This is The site of the Youtuber and Minecraft modder Tech Geek United</p>
+<p>This "about" page is more of a what-do-i-help-with page.</p>
+    
+    <h1>Projects i help with / My Projects</p>
+    <a href='https://github.com/Pokechu22/WorldDownloader/tree/gh-pages'>https://github.com/Pokechu22/WorldDownloader/tree/gh-pages</a>
+    <a>https://github.com/TechGeekUnited/TGUs-Tools-games</a>
+    <a>
 </body>
 </html>
 
