--- a/about.html
+++ b/about.html
@@ -48,8 +48,9 @@ li a:hover {
 <p>This "about" page is more of a what-do-i-help-with page.</p>
     
     <h1>Projects i help with / My Projects</p>
-    <a href='https://github.com/Pokechu22/WorldDownloader/tree/gh-pages'>https://github.com/Pokechu22/WorldDownloader/tree/gh-pages</a>
-    <a>https://github.com/TechGeekUnited/TGUs-Tools-games</a>
+    <a href='https://github.com/Pokechu22/WorldDownloader/tree/gh-pages'Pokechu22/WorldDownloader - gh-pages</a>
+    <a href='https://github.com/TechGeekUnited/TGUs-Tools-games'>TGUs Tools/games</a>
+    <a href='https://github.com/TechGeekUnited/HTML-Based-Unblocked-Games-Blocker'>HTML Based Unblocked Games Blocker</a>
     <a>
 </body>
 </html>
