--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@ li a:hover {
   <li><a href="contact.html" class="active">Contact</a></li>
   <li><a href="about.html">About</a></li>
 </ul>
-<p>You Can contact me at TGUyt.dev@gmail.com Or Yuo can DM Me at TechGeekUnited#4329 </p>
+<p>You Can contact me at TGUyt.dev@gmail.com Or You can DM Me on discord at TechGeekUnited#4329 </p>
 </body>
 </html>
 
