--- a/about.html
+++ b/about.html
@@ -49,10 +49,10 @@ li a:hover {
     
     <h1>Projects i help with / My Projects</p>
     
-    <a href='https://github.com/Pokechu22/WorldDownloader/tree/gh-pages'Pokechu22/WorldDownloader - gh-pages</a><br>
+   <p> <a href='https://github.com/Pokechu22/WorldDownloader/tree/gh-pages'Pokechu22/WorldDownloader - gh-pages</a><br>
     <a href='https://github.com/TechGeekUnited/TGUs-Tools-games'>TGUs Tools/games</a><br>
     <a href='https://github.com/TechGeekUnited/HTML-Based-Unblocked-Games-Blocker'>HTML Based Unblocked Games Blocker</a><br>
-    <a>
+    </p>
 </body>
 </html>
 
